--- a/.github/workflows/buildbhm.yaml
+++ b/.github/workflows/buildbhm.yaml
@@ -3,7 +3,7 @@ name: Deploy-App-on-AKS-2
 on:
   push:
     branches:
-      - develop
+      - develop2
 jobs:
   terraform:
     runs-on: ubuntu-latest
