--- a/.github/workflows/deploy-app-to-aks.yml
+++ b/.github/workflows/deploy-app-to-aks.yml
@@ -18,14 +18,14 @@ jobs:
       - name: Log in to Azure Container Registry
         uses: azure/docker-login@v1
         with:
-          login-server: ${{ secrets.ACR_LOGIN_SERVER }}
+          login-server: "noderegistries.azurecr.io"
           username: "noderegistries"
-          password: ${{ secrets.ACR_PASSWORD }}
+          password: "nazKbCN+6F6hP8F1YmzhWyle1hQHxUIIgQAx+F3rMv+ACRC8DUzu"
 
       - name: Build and push Docker image
         run: |
-          docker build . -t ${{ secrets.ACR_LOGIN_SERVER }}/${{ secrets.APP_NAME }}:${{ github.sha }}
-          docker push ${{ secrets.ACR_LOGIN_SERVER }}/${{ secrets.APP_NAME }}:${{ github.sha }}
+          docker build . -t "noderegistries.azurecr.io/aks-nodejs-helm:${{ github.sha }}
+          docker push noderegistries.azurecr.io/aks-nodejs-helm:${{ github.sha }}
 
   update-helm-chart:
     runs-on: ubuntu-latest
@@ -42,9 +42,9 @@ jobs:
 
       - name: Update Values.yaml
         run: |
-          yq w -i ${{ secrets.CHART_NAME }}/values.yaml image.repository "$ACR_LOGIN_SERVER/${{ secrets.APP_NAME }}"
-          yq w -i ${{ secrets.CHART_NAME }}/values.yaml image.tag "${{ github.sha }}"
-          yq w -i ${{ secrets.CHART_NAME }}/Chart.yaml version "0.${{ github.run_number }}.0"
+          yq w -i nodeapp/values.yaml image.repository ""noderegistries.azurecr.io/aks-nodejs-helm"
+          yq w -i nodeapp/values.yaml image.tag "${{ github.sha }}"
+          yq w -i nodeapp/Chart.yaml version "0.${{ github.run_number }}.0"
 
       - name: Commit & Push to GitHub
         run: |
@@ -67,13 +67,13 @@ jobs:
           sudo mv linux-amd64/helm /usr/local/bin/helm
 
       - name: Packaging the Helm Chart
-        run: helm package ${{ secrets.CHART_NAME }}
+        run: helm package nodeapp
 
       - name: Log in to Helm Registry
-        run: helm registry login ${{ secrets.ACR_LOGIN_SERVER }} --username ${{ secrets.ACR_USERNAME }} --password ${{ secrets.ACR_PASSWORD }}
+        run: helm registry login noderegistries.azurecr.io --username noderegistries --password nazKbCN+6F6hP8F1YmzhWyle1hQHxUIIgQAx+F3rMv+ACRC8DUzu
 
       - name: Pushing Helm chart to registry
-        run: helm push "${{ secrets.CHART_NAME }}-0.${{ github.run_number }}.0.tgz" "oci://${{ secrets.ACR_LOGIN_SERVER }}/helm"
+        run: helm push "nodeapp-0.${{ github.run_number }}.0.tgz" "oci://noderegistries.azurecr.io/helm"
 
   install-helm-chart:
     runs-on: ubuntu-latest
@@ -88,7 +88,7 @@ jobs:
           sudo mv linux-amd64/helm /usr/local/bin/helm
 
       - name: Log in to Helm Registry
-        run: helm registry login ${{ secrets.ACR_LOGIN_SERVER }} --username ${{ secrets.ACR_USERNAME }} --password ${{ secrets.ACR_PASSWORD }}
+        run: helm registry login noderegistries.azurecr.io --username noderegistries --password nazKbCN+6F6hP8F1YmzhWyle1hQHxUIIgQAx+F3rMv+ACRC8DUzu
 
       - name: helm install
-        run: bash ./script.sh "0.${{ github.run_number }}.0" ${{ secrets.NAMESPACE }} ${{ secrets.CHART_NAME }} ${{ secrets.ACR_LOGIN_SERVER }}
+        run: bash ./script.sh "0.${{ github.run_number }}.0" nodejs nodeapp noderegistries.azurecr.io
