Update Docker image and Helm chart references in GitHub Actions workflows

--- a/.github/workflows/deploy-app-to-aks.yml
+++ b/.github/workflows/deploy-app-to-aks.yml
@@ -24,7 +24,7 @@ jobs:
 
       - name: Build and push Docker image
         run: |
-          docker build . -t "noderegistries.azurecr.io/aks-nodejs-helm:${{ github.sha }}
+          docker build . -t noderegistries.azurecr.io/aks-nodejs-helm:${{ github.sha }}
           docker push noderegistries.azurecr.io/aks-nodejs-helm:${{ github.sha }}
 
   update-helm-chart:
