--- a/.github/workflows/deploy-app-to-aks.yml
+++ b/.github/workflows/deploy-app-to-aks.yml
@@ -67,7 +67,7 @@ jobs:
           sudo mv linux-amd64/helm /usr/local/bin/helm
 
       - name: Packaging the Helm Chart
-        run: helm package nodeapp
+        run: helm package nodeapp --version "0.${{ github.run_number }}.0"
 
       - name: Log in to Helm Registry
         run: helm registry login noderegistries.azurecr.io --username noderegistries --password nazKbCN+6F6hP8F1YmzhWyle1hQHxUIIgQAx+F3rMv+ACRC8DUzu
