--- a/.github/workflows/deploy-app-to-aks.yml
+++ b/.github/workflows/deploy-app-to-aks.yml
@@ -91,4 +91,4 @@ jobs:
         run: helm registry login noderegistries.azurecr.io --username noderegistries --password nazKbCN+6F6hP8F1YmzhWyle1hQHxUIIgQAx+F3rMv+ACRC8DUzu
 
       - name: helm install
-        run: helm install nodeapp noderegistries.azurecr.io/helm/nodeapp-0.${{ github.run_number }}.0.tgz
+        run: helm install nodeapp noderegistries.azurecr.io/helm/nodeapp --version "0.${{ github.run_number }}.0"
