--- a/.github/workflows/deploy-app-to-aks.yml
+++ b/.github/workflows/deploy-app-to-aks.yml
@@ -90,5 +90,9 @@ jobs:
       - name: Log in to Helm Registry
         run: helm registry login noderegistries.azurecr.io --username noderegistries --password nazKbCN+6F6hP8F1YmzhWyle1hQHxUIIgQAx+F3rMv+ACRC8DUzu
 
-      - name: helm install
-        run: helm install nodeapp noderegistries.azurecr.io/helm/nodeapp:0.${{ github.run_number }}.0
+      - name: Install Helm Chart
+        run: helm install nodeapp noderegistries.azurecr.io/helm/nodeapp-0.${{ github.run_number }}.0.tgz
+
+      - name: Get the application URL
+        run: |
+          echo "Application URL: http://$(kubectl get service nodeapp -o jsonpath='{.status.loadBalancer.ingress[0].ip}'):$(kubectl get service nodeapp -o jsonpath='{.spec.ports[0].port}')"
