--- a/.github/workflows/deploy-app-to-aks.yml
+++ b/.github/workflows/deploy-app-to-aks.yml
@@ -91,7 +91,7 @@ jobs:
         run: helm registry login noderegistries.azurecr.io --username noderegistries --password nazKbCN+6F6hP8F1YmzhWyle1hQHxUIIgQAx+F3rMv+ACRC8DUzu
 
       - name: Install Helm Chart
-        run: helm install nodeapp noderegistries.azurecr.io/helm/nodeapp-0.${{ github.run_number }}.0.tgz
+        run: helm install nodeapp noderegistries.azurecr.io/helm/nodeapp:0.${{ github.run_number }}.0.tgz
 
       - name: Get the application URL
         run: |
