Update AKS deployment workflow to include environment selection

--- a/.github/workflows/deploy-app-to-aks.yml
+++ b/.github/workflows/deploy-app-to-aks.yml
@@ -1,6 +1,17 @@
 name: Deploy-App-on-AKS
 
 on:
+  workflow_dispatch:
+    inputs:
+      environment:
+        description: "Environment to deploy"
+        required: true
+        type: choice
+        default: dev
+        options:
+          - dev
+          - staging
+          - production
   push:
     branches:
       - develop
