Update AKS deployment workflow to include Azure login and kubectl setup

--- a/.github/workflows/deploy-app-to-aks.yml
+++ b/.github/workflows/deploy-app-to-aks.yml
@@ -104,7 +104,8 @@ jobs:
       - name: Log in to Azure
         uses: azure/login@v1
         with:
-          creds: 1547a768-712a-4113-952a-87e414d0f0d8
+          creds: |
+            "{ "clientId": "6a7eceec-399a-462e-be05-8508a526be6e", "clientSecret": "1547a768-712a-4113-952a-87e414d0f0d8", "tenantId": "287e9555-a4e3-48b9-9f39-9c97477c736f" }"
 
       - name: Set up kubectl
         uses: azure/aks-set-context@v3
