--- a/.github/workflows/deploy-app-to-aks.yml
+++ b/.github/workflows/deploy-app-to-aks.yml
@@ -15,6 +15,7 @@ on:
   push:
     branches:
       - develop
+      - master
 
 jobs:
   build-and-push-image:
@@ -29,14 +30,14 @@ jobs:
       - name: Log in to Azure Container Registry
         uses: azure/docker-login@v1
         with:
-          login-server: "noderegistries.azurecr.io"
-          username: "noderegistries"
-          password: "nazKbCN+6F6hP8F1YmzhWyle1hQHxUIIgQAx+F3rMv+ACRC8DUzu"
+          login-server: ${{ secrets.ACR_LOGIN_SERVER}}
+          username: ${{ secrets.ACR_USERNAME }}
+          password: ${{ secrets.ACR_PASSWORD }}
 
       - name: Build and push Docker image
         run: |
-          docker build . -t noderegistries.azurecr.io/aks-nodejs-helm:${{ github.sha }}
-          docker push noderegistries.azurecr.io/aks-nodejs-helm:${{ github.sha }}
+          docker build . -t ${{ secrets.ACR_LOGIN_SERVER }}/${{ secrets.APP_NAME }}:${{ github.sha }}
+          docker push ${{ secrets.ACR_LOGIN_SERVER }}/${{ secrets.APP_NAME }}:${{ github.sha }}
 
   update-helm-chart:
     runs-on: ubuntu-latest
@@ -53,9 +54,10 @@ jobs:
 
       - name: Update Values.yaml
         run: |
-          yq w -i nodeapp/values.yaml image.repository "noderegistries.azurecr.io/aks-nodejs-helm"
-          yq w -i nodeapp/values.yaml image.tag "${{ github.sha }}"
-          yq w -i nodeapp/Chart.yaml version "0.${{ github.run_number }}.0"
+          # yq w -i nodeapp/values.yaml image.repository "${{ secrets.ACR_LOGIN_SERVER }}/${{ secrets.APP_NAME }}"
+          yq w -i ${{ secrets.CHART_NAME }}/values.yaml image.repository "${{ secrets.ACR_LOGIN_SERVER }}/${{ secrets.APP_NAME }}"
+          yq w -i ${{ secrets.CHART_NAME }}/values.yaml image.tag "${{ github.sha }}"
+          yq w -i ${{ secrets.CHART_NAME }}/Chart.yaml version "0.${{ github.run_number }}.0"
 
       - name: Commit & Push to GitHub
         run: |
@@ -78,13 +80,13 @@ jobs:
           sudo mv linux-amd64/helm /usr/local/bin/helm
 
       - name: Packaging the Helm Chart
-        run: helm package nodeapp --version "0.${{ github.run_number }}.0"
+        run: helm package ${{ secrets.CHART_NAME }} --version "0.${{ github.run_number }}.0"
 
       - name: Log in to Helm Registry
-        run: helm registry login noderegistries.azurecr.io --username noderegistries --password nazKbCN+6F6hP8F1YmzhWyle1hQHxUIIgQAx+F3rMv+ACRC8DUzu
+        run: helm registry login ${{ secrets.ACR_LOGIN_SERVER }} --username ${{ secrets.ACR_USERNAME }} --password ${{ secrets.ACR_PASSWORD }}
 
       - name: Pushing Helm chart to registry
-        run: helm push "nodeapp-0.${{ github.run_number }}.0.tgz" "oci://noderegistries.azurecr.io/helm"
+        run: helm push "nodeapp-0.${{ github.run_number }}.0.tgz" "oci://${{ secrets.ACR_LOGIN_SERVER }}/helm"
 
   install-helm-chart:
     runs-on: ubuntu-latest
@@ -99,23 +101,20 @@ jobs:
           sudo mv linux-amd64/helm /usr/local/bin/helm
 
       - name: Log in to Helm Registry
-        run: helm registry login noderegistries.azurecr.io --username noderegistries --password nazKbCN+6F6hP8F1YmzhWyle1hQHxUIIgQAx+F3rMv+ACRC8DUzu
+        run: helm registry login ${{ secrets.ACR_LOGIN_SERVER }} --username ${{ secrets.ACR_USERNAME }} --password ${{ secrets.ACR_PASSWORD }}
 
       # - name: Log in to Azure
-      #   uses: azure/login@v1
+      #   uses: azure/login@v2
       #   with:
-      #     client-id: 6a7eceec-399a-462e-be05-8508a526be6e
-      #     tenant-id: 287e9555-a4e3-48b9-9f39-9c97477c736f
-      #     subscription-id: f6e80462-2876-4bd9-893f-6802bd537f70
+      #     creds:
+      # - name: Set up kubectl
+      #   uses: azure/aks-set-context@v3
+      #   with:
+      #     resource-group: NodeRG
+      #     cluster-name: NodeCluster
 
-      - name: Set up kubectl
-        uses: azure/aks-set-context@v3
-        with:
-          resource-group: NodeRG
-          cluster-name: NodeCluster
-
-      - name: Install Helm Chart
-        run: helm install nodeapp noderegistries.azurecr.io/helm/nodeapp-0.${{ github.run_number }}.0.tgz
+      # - name: Install Helm Chart
+      #   run: helm install nodeapp noderegistries.azurecr.io/helm/nodeapp-0.${{ github.run_number }}.0.tgz
 
       - name: Get the application URL
         run: |
