--- a/.github/workflows/deploy-app-to-aks.yml
+++ b/.github/workflows/deploy-app-to-aks.yml
@@ -106,7 +106,9 @@ jobs:
       - name: Log in to Azure
         uses: azure/login@v1
         with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
       - name: Set up kubectl
         uses: azure/aks-set-context@v3
         with:
