--- a/.github/workflows/deploy-app-to-aks.yml
+++ b/.github/workflows/deploy-app-to-aks.yml
@@ -109,6 +109,8 @@ jobs:
           client-id: ${{ secrets.AZURE_CLIENT_ID }}
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+        env:
+          ACTIONS_ID_TOKEN_REQUEST_URL: https://api.github.com
       - name: Set up kubectl
         uses: azure/aks-set-context@v3
         with:
