--- a/.github/workflows/deploy-app-to-aks.yml
+++ b/.github/workflows/deploy-app-to-aks.yml
@@ -106,11 +106,8 @@ jobs:
       - name: Log in to Azure
         uses: azure/login@v1
         with:
-          client-id: ${{ secrets.AZURE_CLIENT_ID }}
-          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-        env:
-          ACTIONS_ID_TOKEN_REQUEST_URL: https://api.github.com
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
       - name: Set up kubectl
         uses: azure/aks-set-context@v3
         with:
