--- a/.github/workflows/deploy-app-to-aks.yml
+++ b/.github/workflows/deploy-app-to-aks.yml
@@ -1,5 +1,6 @@
 name: Deploy-App-on-AKS
-
+permissions:
+  id-token: write
 on:
   workflow_dispatch:
     inputs:
@@ -105,10 +106,11 @@ jobs:
 
       - name: Log in to Azure
         uses: azure/login@v1
+
         with:
           client-id: ${{ secrets.AZURE_CLIENT_ID }}
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-          allow-no-subscriptions: true
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
       - name: Set up kubectl
         uses: azure/aks-set-context@v3
