Update AKS deployment workflow to remove unused permissions and include Azure login and kubectl setup

--- a/.github/workflows/deploy-app-to-aks.yml
+++ b/.github/workflows/deploy-app-to-aks.yml
@@ -1,7 +1,9 @@
 name: Deploy-App-on-AKS
-permissions:
-  id-token: write
-  contents: read
+
+# permissions:
+#   id-token: write
+#   contents: read
+
 on:
   workflow_dispatch:
     inputs:
