Refactor AKS deployment workflow to include composite action for Azure login and remove unused permissions

--- a/.github/workflows/deploy-app-to-aks.yml
+++ b/.github/workflows/deploy-app-to-aks.yml
@@ -1,8 +1,7 @@
 name: Deploy-App-on-AKS
 
-# permissions:
-#   id-token: write
-#   contents: read
+permissions:
+  id-token: write
 
 on:
   workflow_dispatch:
