--- a/.github/workflows/deploy-app-to-aks.yml
+++ b/.github/workflows/deploy-app-to-aks.yml
@@ -1,7 +1,7 @@
 name: Deploy-App-on-AKS
 
-# permissions:
-#   id-token: write
+permissions:
+  id-token: write
 
 on:
   workflow_dispatch:
@@ -64,7 +64,7 @@ jobs:
 
       - name: Commit & Push to GitHub
         run: |
-          git config user.email "github-actions@github.com"
+          git config user.email "rublel.dev@gmail.com"
           git config user.name "GitHub Actions"
           git add .
           git commit -m "Update Values.yaml [skip ci]"
